[package]
name = "standard-pid"
version = "0.1.0"
edition = "2021"
description = "Standard PID implementation in Rust for serious embedded projects"
readme = "README.md"
repository = "https://github.com/Gip-Gip/standard-pid"
license = "MIT"
license-file = "LICENSE"
keywords = ["embedded", "pid", "standard"]
categories = ["development-tools", "embedded", "no-std", "no-std::no-alloc"]

[dependencies]
num-traits = { version = "0.2.19", default-features = false }
